[gd_scene load_steps=16 format=2]

[ext_resource path="res://Font/ChakraPetch-SemiBold.ttf" type="DynamicFontData" id=1]
[ext_resource path="res://Font/ChakraPetch-Bold.ttf" type="DynamicFontData" id=2]
[ext_resource path="res://Menu/MainMenu.gd" type="Script" id=3]
[ext_resource path="res://Player/Player_Ship_Default.png" type="Texture" id=4]
[ext_resource path="res://Player/Ship_Exhaust_2.png" type="Texture" id=5]
[ext_resource path="res://Player/Ship_Exhaust_3.png" type="Texture" id=6]
[ext_resource path="res://Player/Ship_Exhaust_1.png" type="Texture" id=7]
[ext_resource path="res://Transitions/Transition.tscn" type="PackedScene" id=8]

[sub_resource type="DynamicFont" id=1]
size = 128
outline_size = 2
font_data = ExtResource( 2 )

[sub_resource type="SpriteFrames" id=2]
animations = [ {
"frames": [ ExtResource( 7 ), ExtResource( 5 ), ExtResource( 6 ), ExtResource( 5 ) ],
"loop": true,
"name": "flying",
"speed": 5.0
} ]

[sub_resource type="SpriteFrames" id=3]
animations = [ {
"frames": [ ExtResource( 4 ) ],
"loop": true,
"name": "flying",
"speed": 7.0
} ]

[sub_resource type="DynamicFont" id=4]
size = 32
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=5]
size = 32
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="DynamicFont" id=6]
size = 32
outline_size = 2
font_data = ExtResource( 1 )

[sub_resource type="RectangleShape2D" id=7]
extents = Vector2( 1207.41, 871.501 )

[node name="MainMenu" type="Node2D"]
position = Vector2( 725, 540 )
script = ExtResource( 3 )

[node name="TitleLabel" type="Label" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -254.5
margin_top = -294.901
margin_right = 254.5
margin_bottom = -127.901
custom_fonts/font = SubResource( 1 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "Star Cry"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="TitleExhaustSprite" type="AnimatedSprite" parent="."]
position = Vector2( -0.16687, 28.6228 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 2 )
animation = "flying"
playing = true

[node name="TitleShipSprite" type="AnimatedSprite" parent="."]
position = Vector2( 0, 28.7341 )
scale = Vector2( 0.5, 0.5 )
frames = SubResource( 3 )
animation = "flying"
playing = true

[node name="PlayButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -45.0
margin_top = 225.0
margin_right = 45.0
margin_bottom = 273.0
custom_fonts/font = SubResource( 4 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="InstructionsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -109.5
margin_top = 300.0
margin_right = 109.5
margin_bottom = 348.0
custom_fonts/font = SubResource( 5 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "HOW TO PLAY"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="QuitButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -41.5
margin_top = 450.0
margin_right = 41.5
margin_bottom = 498.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "QUIT"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="CreditsButton" type="Button" parent="."]
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
margin_left = -77.0
margin_top = 375.0
margin_right = 67.0
margin_bottom = 423.0
custom_fonts/font = SubResource( 6 )
custom_colors/font_color = Color( 0, 0, 0, 1 )
text = "CREDITS"
__meta__ = {
"_edit_use_anchors_": false
}

[node name="DespawnArea" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="DespawnArea"]
position = Vector2( 2.37842, 0 )
shape = SubResource( 7 )

[node name="Transition" parent="." instance=ExtResource( 8 )]

[connection signal="pressed" from="PlayButton" to="." method="_on_PlayButton_pressed"]
[connection signal="pressed" from="InstructionsButton" to="." method="_on_InstructionsButton_pressed"]
[connection signal="pressed" from="QuitButton" to="." method="_on_QuitButton_pressed"]
[connection signal="pressed" from="CreditsButton" to="." method="_on_CreditsButton_pressed"]
[connection signal="area_entered" from="DespawnArea" to="." method="_on_DespawnArea_area_entered"]
